fix: remove overflow constraint

--- a/.storybook/index.css
+++ b/.storybook/index.css
@@ -11,7 +11,6 @@ body,
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  overflow: hidden;
 }
 
 #root {
